[package]
name = "raag-detection"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio processing
hound = "3.5"
rustfft = "6.2"
ndarray = "0.15"

# CLI and utilities
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
